# setup

./: .browserslistrc  .eslintrc  .gitignore  README.md  package.json  remix.config.js  tsconfig.json  webpack.config.js
app/: entry.server.tsx  root.tsx
app/routes/: index.tsx
public/: index.html
solver/: Cargo.toml  README.md
solver/src/: decoder.rs  lib.rs  solver.rs  types.rs
src/: App.tsx  index.html  index.js  index.tsx
src/components/: Canvas.tsx  GlobalStyles.tsx  ModelProvider.tsx  Solver.tsx  Video.tsx
src/utils/: canvas.ts  solver.ts  types.ts
wasm/: Cargo.toml
wasm/src/: compare.rs  iter.rs  lib.rs  solver.rs  types.rs  utils.rs
