[package]
name = "solver"
description = "Set game solver"
repository = "https://github.com/mskelton/setup"
license = "ISC"
version = "0.1.0"
authors = ["Mark Skelton"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
